[package]
name = "tims-nft-mint-vault-swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tims_nft_mint_vault_swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = { version = "4.1.2"}
solana-program = "2.0.2"
toml_datetime = "0.6.6"
winnow = "0.6.13"
fixed = "1.27.0"
